Contrast tweaks and focus indicator fixes

--- a/css/spni.css
+++ b/css/spni.css
@@ -1481,27 +1481,28 @@ ul.dropdown-menu>li {
 }
 
 .title-content-button {
-    background: rgba(240, 240, 240, 0.9);
+    background: rgba(240, 240, 240, 0.95);
     opacity: 0.8;
     width: 7rem;
     height: 7rem;
     object-fit: cover;
-    filter: contrast(0.75);
+    filter: contrast(0.8) brightness(0.95);
 }
 
-.title-content-button:hover {
-    opacity: 0.85;
-    filter: contrast(0.9);
+.title-content-button:hover,
+.focus-indicators-enabled .title-content-button:focus {
+    opacity: 0.87;
+    filter: contrast(0.95);
 }
 
 .title-content-button.selected {
     opacity: 1;
-    background-color: rgb(240, 240, 240);
+    background-color: white;
     filter: none;
 }
 
 .title-content-button:active {
-    opacity: 0.9;
+    opacity: 0.93;
     filter: none;
 }
 
@@ -4764,6 +4765,7 @@ ul.dropdown-menu>li {
 .focus-indicators-enabled button:focus {
     outline: 0.18rem dotted white;
 }
+.focus-indicators-enabled input[type=image]:not(.locked),
 .focus-indicators-enabled button.title-content-button:not(.locked)
 {
     outline-color: black;
